--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "git": "git add . && git commit -m",
+    "postgit": "git push origin master"
   },
   "eslintConfig": {
     "extends": [
